# spexod

./: .gitignore  README.md  getting_started.ipynb  pypi.sh  pyproject.toml  requirements.txt  setup.py  test.txt
Sphinx/: API.py  README.rst
Sphinx/docs/source/: conf.py
Sphinx/docs/source/csvs/: availableiso.csv  convert_to_csv.py  curated.csv  params_units.csv
docs/: .buildinfo  api.html  dataflow.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: api.rst.txt  dataflow.rst.txt  index.rst.txt  usage.rst.txt
docs/_static/: alabaster.css
docs_build/: make.bat  sphinx_requirements.txt
docs_build/source/: conf.py  usage.rst
docs_build/source/csvs/: isotopologues.csv  objectnamealiases.csv  spectra.csv  spectrum_handle.csv
spexod/: API.py  FITSREAD.md  api.py  filepaths.py  fits_read.py
